popup.css
html {
    margin: 0;
    padding: 0;
}

body {
    margin: 0;
    padding: 0;
}

.title {
  height: 25px;
  background-color: white;
}

h2 {
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-size: 18px;
    line-height: 10px;
    text-align: left;
    color: black;
    margin-left: 15px;
}

#ywflogo {
  position: relative;
  top: 4px;
  height: 20px;
  width: 30px;
  margin-right: 5px;
}

.error {
    height: 100px;
    width: 330px;
    text-align: center;
}

#error-msg {
  position: absolute;
  top: 40px;
  font-family: 'Roboto Mono';
  font-size: 12px;
}

#close-error {
  background: #EB3323;
  position: absolute;
  width: 90px;
  height: 25px;
  left: 105px;
  top: 90px;
  border: 1px solid;
  border-color: #EB3323;
  border-radius: 12px;
  outline: none;

  font-family: 'Roboto';
  font-size: 14px;
  color: white;
}

.disconnected {
    height: 145px;
    width: 330px;
    background: #F9F9F9;
}

#create-help {
    text-align: center;
    padding-left: 10px;
    padding-right: 10px;
    font-family: 'Roboto';
    font-size: 12px;
    position: relative;
    top: 15px;
    color: #757575;
}

#control-checkbox {
  font-family: 'Roboto';
  font-size: 11px;
  text-align: center;
  position: absolute;
  top: 120px;
  left: 76px;
}

.connected {
    height: 140px;
    width: 330px;
    background: #F9F9F9;
}

#link-help {
    text-align: left;
    margin-left: 5px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    position: relative;
    top: 10px;
    font-family: 'Roboto';
    font-size: 12px;
    line-height: 14px;
    color: #757575;
}

#create-session {
    background: #EB3323;
    position: absolute;
    width: 190px;
    height: 30px;
    top: 150px;
    left: 70px;
    border: 1px solid;
    border-color: #EB3323;
    border-radius: 8px;
    outline: none;

    font-family: 'Roboto Mono';
    font-size: 15px;
    color: white;
}

#leave-session {
    position: absolute;
    width: 80px;
    height: 28px;
    left: 230px;
    top: 120px;
    border: 2px solid;
    border-color: #C7C7C7;
    border-radius: 12px;
    outline: none;
    background-color: #F9F9F9;

    font-family: 'Roboto Mono';
    font-size: 14px;
    color: #EB3323;
}

#share-url {
    position: absolute;
    width: 157px;
    height: 22px;
    left: 20px;
    top: 120px;
    border: 2px solid #C7C7C7;
    border-color: #C7C7C7;
    border-radius: 12px;
    outline: none;

    background-color: #F9F9F9;

    font-family: 'Roboto';
    font-size: 11px;
    color: #757575;
} 


#copy-btn-clicked {
    position: absolute;
    left: 193px;
    top: 120px;
}

#copy-btn {
    position: absolute;
    width: 28px;
    height: 28px;
    left: 193px;
    top: 120px;
    background-color: white;

    cursor: pointer;
}

#copy-btn:active {
    opacity: 0;
}

/* #show-log-btn {
    position: absolute;
    width: 26px;
    height: 12px;
    left: 152px;
    top: 165px;
    transform: rotate(180deg);

    outline: none;
    background: white;
} */

/* #chat-icon-clicked {
  position: absolute;
  top: 167px;
  left: 89.75px;
}

#chat-icon {
  position: absolute;
  top: 167px;
  left: 89.75px;
} */
/* 
#separator1 {
  position: absolute;
  top: 158px;
  left: 163px;
  height: 16px;
  width: 4px;
}

#party-icon-clicked {
  position: absolute;
  top: 160px;
  left: 127px;
  width: 21px;
}

#party-icon {
  position: absolute;
  top: 160px;
  left: 127px;
  width: 21px;
  background-color: #F9F9F9;
} */

/* #separator2 {
  position: absolute;
  top: 165px;
  left: 196.375px;
  height: 16px;
  width: 4px;
} */

#exit-settings-icon {
  position: absolute;
  top: 21px;
  left: 301px;
  cursor: pointer;
}

/* #settings-icon-clicked {
  position: absolute;
  top: 148px;
  left: 172px;
} */

#settings-icon {
  position: absolute;
  top: 10px;
  left: 290px;
  cursor: pointer;
}

.settings {
  font-family: 'Roboto';
  font-size: 11px;
  color: black;
}

#settings-head {
  position: absolute;
  top: 310px;
  left: 15px;
  font-size: 13px;
}

.dark-mode {
  position: absolute;
  top: 345px;
  left: 65px;
  line-height: 20px;
}

.switch {
  position: absolute;
  display: inline-block;
  width: 40px;
  height: 20px;
  left: -50px;
  background-color: rgba(0, 0, 0, 0.25);
  border-radius: 20px;
  transition: all 0.3s;
}
.switch::after {
  content: '';
  position: absolute;
  width: 18px;
  height: 18px;
  border-radius:50%;
  background-color: white;
  top: 1px;
  left: 1px;
  transition: all 0.3s;
}

.checkbox:checked + .switch::after {
  left : 20px;
}
.checkbox:checked + .switch {
  background-color: #EB3323;
}
.checkbox {
  display : none;
}

#master-user {
  position: absolute;
  top: 365px;
  left: 15px;
}

#current-username {
  position: absolute;
  top: 385px;
  left: 15px;
  font-size: 13px;
}

.change-username {
  position: absolute;
  top: 422px;
  left: 15px;

  font-family: 'Roboto';
}

.change-username input {
  height: 20px;
  width: 300px;
  font-family: 'Roboto';

  border: 1px solid #C7C7C7;
  border-radius: 12px;
  outline: none;
  padding: 12px 12px;
  box-sizing: border-box;

  background-color: #F9F9F9;
}

.change-username button {
  display: none;
}

.party-room {
  overflow: hidden;
  font-family: 'Roboto';
  font-size: 11px;
}

.party-container {
  position: absolute;
  top: 160px;
  width: 300px;
  height: 150px;
  left: 15px;
  /* border: solid 1px #C7C7C7;
  border-radius: 5px; */
  overflow: auto;
  border-bottom: solid 2px #C7C7C7;

}

.party-container p {
  color: #757575;
}

.party-header {
  text-align: left;
  /* border-bottom: solid 2px #C7C7C7; */
}

/* .party-header p {
  margin-left: 1em;
} */
/* 
.party-container p {
  margin-left: 1em;
  font-size: 10px;
} */

/* #party-count {
  position: absolute;
  top: 370px;
  left: 18px;
  color: #757575;
} */

.support {
  position: absolute;
  top: 445px;
  left: 15px;
}

#support-head {
  font-size: 13px;
}

#go-back-chat {
  position: absolute;
  top: 499px;
  left: 181px;
  font-size: 11px;
  color: #045FD4;
  cursor: pointer;
}

.container {
    position: absolute;
    /* box-sizing: border-box; */
    top: 155px;
    width: 305px;
    left: 15px;
    /* margin: 0 auto; */
    /* border: solid 1px #EB3323;
    border-radius: 5px; */
    overflow: hidden;

    /* border-top: solid 1px black; */

    font-family: 'Roboto';
    font-size: 11.5px;
    
}
  .chat-container {
    height: 315px;
    width: 305px;
    overflow: auto;
  }
  /* .chat-container .intro-message {
    padding: 0.5px;
    text-align: center;
    font-size: 13px;
    font-weight: normal;
  }
  .chat-container .message {
    padding: 0.5px;
    text-align: left;
  } */

  .chat-container #lighten {
    color: #9D9D9D;
  }

  .send-message input {
    width: 94%;
    border: solid 1px #C7C7C7;
    border-radius: 8px;
    font-size: 11px;
    padding: 7px;

    outline: none;

    font-family: 'Roboto';

    background-color: #F9F9F9;
  }
  .send-message button {
    display: none;
  }

  /* #hide-log-btn {
    position: absolute;
    width: 26px;
    height: 12px;
    left: 152px;
    top: 525px;

    outline: none;
    background: white;
} */

#see-party {
  position: relative;
  padding-right: 10px;
  float: right;
  color: #045FD4;
  font-size: 11px;
  cursor: pointer;
}

.loading {
    height: 107px;
    width: 330px;
}

.sk-fading-circle {
    /* margin: 100px auto; */
    width: 40px;
    height: 40px;
    position: absolute;

    left: 145px;
    top: 80px;
  }
  
  .sk-fading-circle .sk-circle {
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
  }
  
  .sk-fading-circle .sk-circle:before {
    content: '';
    display: block;
    margin: 0 auto;
    width: 15%;
    height: 15%;
    background-color: #333;
    border-radius: 100%;
    -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
            animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
  }
  .sk-fading-circle .sk-circle2 {
    -webkit-transform: rotate(30deg);
        -ms-transform: rotate(30deg);
            transform: rotate(30deg);
  }
  .sk-fading-circle .sk-circle3 {
    -webkit-transform: rotate(60deg);
        -ms-transform: rotate(60deg);
            transform: rotate(60deg);
  }
  .sk-fading-circle .sk-circle4 {
    -webkit-transform: rotate(90deg);
        -ms-transform: rotate(90deg);
            transform: rotate(90deg);
  }
  .sk-fading-circle .sk-circle5 {
    -webkit-transform: rotate(120deg);
        -ms-transform: rotate(120deg);
            transform: rotate(120deg);
  }
  .sk-fading-circle .sk-circle6 {
    -webkit-transform: rotate(150deg);
        -ms-transform: rotate(150deg);
            transform: rotate(150deg);
  }
  .sk-fading-circle .sk-circle7 {
    -webkit-transform: rotate(180deg);
        -ms-transform: rotate(180deg);
            transform: rotate(180deg);
  }
  .sk-fading-circle .sk-circle8 {
    -webkit-transform: rotate(210deg);
        -ms-transform: rotate(210deg);
            transform: rotate(210deg);
  }
  .sk-fading-circle .sk-circle9 {
    -webkit-transform: rotate(240deg);
        -ms-transform: rotate(240deg);
            transform: rotate(240deg);
  }
  .sk-fading-circle .sk-circle10 {
    -webkit-transform: rotate(270deg);
        -ms-transform: rotate(270deg);
            transform: rotate(270deg);
  }
  .sk-fading-circle .sk-circle11 {
    -webkit-transform: rotate(300deg);
        -ms-transform: rotate(300deg);
            transform: rotate(300deg); 
  }
  .sk-fading-circle .sk-circle12 {
    -webkit-transform: rotate(330deg);
        -ms-transform: rotate(330deg);
            transform: rotate(330deg); 
  }
  .sk-fading-circle .sk-circle2:before {
    -webkit-animation-delay: -1.1s;
            animation-delay: -1.1s; 
  }
  .sk-fading-circle .sk-circle3:before {
    -webkit-animation-delay: -1s;
            animation-delay: -1s; 
  }
  .sk-fading-circle .sk-circle4:before {
    -webkit-animation-delay: -0.9s;
            animation-delay: -0.9s; 
  }
  .sk-fading-circle .sk-circle5:before {
    -webkit-animation-delay: -0.8s;
            animation-delay: -0.8s; 
  }
  .sk-fading-circle .sk-circle6:before {
    -webkit-animation-delay: -0.7s;
            animation-delay: -0.7s; 
  }
  .sk-fading-circle .sk-circle7:before {
    -webkit-animation-delay: -0.6s;
            animation-delay: -0.6s; 
  }
  .sk-fading-circle .sk-circle8:before {
    -webkit-animation-delay: -0.5s;
            animation-delay: -0.5s; 
  }
  .sk-fading-circle .sk-circle9:before {
    -webkit-animation-delay: -0.4s;
            animation-delay: -0.4s;
  }
  .sk-fading-circle .sk-circle10:before {
    -webkit-animation-delay: -0.3s;
            animation-delay: -0.3s;
  }
  .sk-fading-circle .sk-circle11:before {
    -webkit-animation-delay: -0.2s;
            animation-delay: -0.2s;
  }
  .sk-fading-circle .sk-circle12:before {
    -webkit-animation-delay: -0.1s;
            animation-delay: -0.1s;
  }
  
  @-webkit-keyframes sk-circleFadeDelay {
    0%, 39%, 100% { opacity: 0; }
    40% { opacity: 1; }
  }
  
  @keyframes sk-circleFadeDelay {
    0%, 39%, 100% { opacity: 0; }
    40% { opacity: 1; } 
  }

